--- a/server/package.json
+++ b/server/package.json
@@ -2,19 +2,21 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --project ./",
+    "start": "ts-node-dev src/server.ts",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Lars",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.18.1",
+    "express": "^4.18.0",
     "helmet": "^5.0.2",
-    "mongoose": "^6.3.2",
+    "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "winston": "^3.7.2"
   },
@@ -29,14 +31,14 @@
     "@types/mocha": "^9.1.1",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.31",
+    "@types/node": "^17.0.27",
     "@types/winston": "^2.4.4",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
-    "mocha": "^10.0.0",
-    "ts-mocha": "^10.0.0",
+    "mocha": "^9.2.2",
+    "ts-mocha": "^9.0.2",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.3"
   }
 }
