--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "author": "Lars",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
