--- a/server/.env_template
+++ b/server/.env_template
@@ -5,6 +5,6 @@ NODE_ENV=development
 MONGODB_URL='mongodb://localhost:27017/'
 MONGODB_DB_NAME='api-user-ts'
 MONGODB_COLLECTION_USERS='user'
-MONGODB_COLLECTION_TODO='todo'
+MONGODB_COLLECTION_MESSAGE='message'
 
 MONGODB_URI='mongodb://server-on-internet-with-some-address:27017/api-user-ts'
