--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,8 @@
   "author": "Lars",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "helmet": "^5.0.2",
@@ -22,6 +22,7 @@
     "winston": "^3.7.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.1",
     "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.12",
