--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "aws-jwt-verify": "^3.1.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "winston": "^3.7.2"
@@ -30,6 +32,7 @@
     "@types/expect": "^24.3.0",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mocha": "^9.1.1",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
