--- a/package.json
+++ b/package.json
@@ -1,1 +1,6 @@
-{}
+{
+    "scripts": {
+        "prestart": "cd server && ts-node-dev src/server.ts",
+        "start": "cd ../client && npm start"
+      }
+}
